c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_parse/var_name_long.c
int main(void) {
    /* Because long is a keyword, you can't use it as a variable name */
    int long = 5;
    return long;
}